Fix right aligned header cells to account for new popover anchor
- this is actually cleaner CSS anyway, win/win!

--- a/src/components/datagrid/body/header/_data_grid_header_row.scss
+++ b/src/components/datagrid/body/header/_data_grid_header_row.scss
@@ -73,14 +73,9 @@
   // Align numeric and currency schemas to the right
   &.euiDataGridHeaderCell--numeric,
   &.euiDataGridHeaderCell--currency {
-    justify-content: flex-end; // Accounts for columns with disabled actions (no popover)
-
-    .euiDataGridHeaderCell__button {
-      justify-content: flex-end; // Accounts for cells with a popover
-    }
-
-    .euiDataGridHeaderCell__icon {
-      margin-left: 0;
+    .euiDataGridHeaderCell__content {
+      flex-grow: 1;
+      text-align: right;
     }
   }
 }
